WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267463
[iOS] Gracefully handle errors from -[_SEExtensionProcess makeLibXPCConnectionError:]
https://bugs.webkit.org/show_bug.cgi?id=267463
Summary
[iOS] Gracefully handle errors from -[_SEExtensionProcess makeLibXPCConnectio...
Andy Estes
Reported
2024-01-12 11:57:20 PST
[iOS] Gracefully handle errors from -[_SEExtensionProcess makeLibXPCConnectionError:]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-12 11:57:36 PST
<
rdar://problem/120915929
>
Andy Estes
Comment 2
2024-01-12 11:59:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22722
EWS
Comment 3
2024-01-12 15:46:02 PST
Committed
272996@main
(de6b4630daa1): <
https://commits.webkit.org/272996@main
> Reviewed commits have been landed. Closing PR #22722 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug