[iOS] Gracefully handle errors from -[_SEExtensionProcess makeLibXPCConnectionError:] https://bugs.webkit.org/show_bug.cgi?id=267463 rdar://120915929

Reviewed by Per Arne Vollan.

When -makeLibXPCConnectionError: returns nil, log an error and invalidate the extension process
rather than crashing some time later due to a nil m_xpcConnection.

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/272996@main